Increased findablility with robots.txt and sitemap.xml

--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="verify-v1" content="unique-string">
+    <meta name="google-site-verification" content="pFE-zV6Jg53acntC26kP_WNzFRbb0LDZbLScokym-2c">
+    <meta name="description" content="Guess Matthew Parker songs by listening to short clips. A fun Heardle-style music guessing game.">
+    <meta name="robots" content="index,follow">
+    <link rel="canonical" href="https://matthew-parker-heardle.vercel.app/">
+
+    <meta property="og:title" content="Matthew Parker Heardle">
+    <meta property="og:description" content="Guess Matthew Parker songs by listening to short clips. A fun Heardle-style music guessing game.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://matthew-parker-heardle.vercel.app/">
+    <meta property="og:image" content="https://matthew-parker-heardle.vercel.app/favicon.ico">
+    <meta property="og:site_name" content="Matthew Parker Heardle">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Matthew Parker Heardle">
+    <meta name="twitter:description" content="Guess Matthew Parker songs by listening to short clips. A fun Heardle-style music guessing game.">
+    <meta name="twitter:image" content="https://matthew-parker-heardle.vercel.app/favicon.ico">
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Matthew Parker Heardle",
+        "url": "https://matthew-parker-heardle.vercel.app/",
+        "description": "Guess Matthew Parker songs by listening to short clips. A fun Heardle-style music guessing game."
+      }
+    </script>
     <script src="https://w.soundcloud.com/player/api.js"></script>
     <title>Matthew Parker Heardle</title>
   </head>
